--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:paddingLeft="15dp"
             android:layout_marginBottom="10dp"
             android:text=""
+            android:id="@+id/username"
             android:background="@drawable/edittext"/>
 
         <EditText
@@ -34,10 +35,12 @@
             android:layout_height="50dp"
             android:drawableEnd="@drawable/eye"
             android:hint="Password"
+            android:inputType="textPassword"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext"
+            android:id="@+id/password"
             android:text="" />
 
         <TextView
@@ -45,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="Forget Password"
-            android:textColor="#3897F0" />
+            android:textColor="#3897F0"/>
 
         <Button
             android:layout_width="match_parent"
@@ -53,7 +56,8 @@
             android:backgroundTint="#3897F0"
             android:layout_marginTop="10dp"
             android:padding="5dp"
-            android:text="Log in" />
+            android:id="@+id/btLogin"
+            android:text="Log in"/>
 
         <LinearLayout
             android:layout_width="match_parent"
