--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,17 +17,17 @@
             android:layout_height="100dp"
             android:src="@drawable/instagram_logo"
             android:layout_marginBottom="10dp"
-            />
+            />        <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="Username"
+        android:paddingLeft="15dp"
+        android:layout_marginBottom="10dp"
+        android:text=""
+        android:id="@+id/username"
+        android:background="@drawable/edittext"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Username"
-            android:paddingLeft="15dp"
-            android:layout_marginBottom="10dp"
-            android:text=""
-            android:id="@+id/username"
-            android:background="@drawable/edittext"/>
+
 
         <EditText
             android:layout_width="match_parent"
